--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -32,7 +32,7 @@
                     <p class="single-card__text"><span class="icon-time"></span> {{ recipe.duration }} мин.</p>
 
                     <ul class="single-card__items">
-{#                        <a href="{% url 'author_recipes' recipe.author %}">#}
+                        <a href="{% url 'profile' recipe.author %}">
                             <li class="single-card__item"><p
                                 class="single-card__text"><span class="icon-user"></span>{{ recipe.author.get_full_name|default:recipe.author.username }}</p></li></a>
                         {% if recipe.author == request.user %}
@@ -43,12 +43,18 @@
                 </div>
                 <ul class="single-card__items">
 {#                    <li class="single-card__item">{% include 'shop_list_button.html' %}</li>#}
-                {% if user.is_authenticated %}
-                    {% if recipe.author|follow:user %}
-                    <li class="single-card__item"><button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться от автора</button></li>
-                    {% else %}
-                    <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
-                    {% endif %}
+                {% if request.user.is_authenticated and request.user != author.username %}
+                    <div class="author-subscribe" data-author="{{ author.id }}">
+                        <p style="padding: 0 0 2em 0;">
+                            <button class="button button_style_light-blue button_size_auto" name="subscribe"
+                                    {% if not is_subscribed %}
+                                        data-out
+                                    {% endif %}>
+                                    {% if is_subscribed %}
+                                        <span class="icon-check button__icon"></span>Отписаться на автора
+                                    {% else %}Подписаться на автора{% endif %}</button>
+                        </p>
+                    </div>
                 {% endif %}
                 </ul>
                 <div class="single-card__section">
