--- a/templates/includes/paginator.html
+++ b/templates/includes/paginator.html
@@ -1,27 +1,25 @@
 <nav class="pagination" aria-label="Search results pages">
     <ul class="pagination__container">
-        {% if items.has_previous %}
-                <li class="pagination__item"><a class="pagination__link link" href="?page={{ items.previous_page_number }}{% for tag in tags_for_page %}&filters={{tag}}{% endfor %}"><span class="icon-left"></span></a></li>
-        {% else %}
-                <li class="pagination__item"><a class="pagination__link link" href="#" tabindex="-1" aria-disabled="true"><span class="icon-left"></span></a></li>
+        {% if page.has_previous %}
+            <li class="pagination__item">
+                <a class="pagination__link link" href="?page={{ page.previous_page_number }}">
+                    <span class="icon-left"></span>
+                </a>
+            </li>
         {% endif %}
 
-
-        {% for i in paginator.page_range %}
-            {% if items.number == i %}
-                <li class="pagination__item pagination__item_active"><a class="pagination__link link" href="?page={{ i }}{% for tag in tags_for_page %}&filters={{tag}}{% endfor %}">{{ i }}</a></li>
-            {% else %}
-                <li class="pagination__item"><a class="pagination__link link" href="?page={{ i }}{% for tag in tags_for_page %}&filters={{tag}}{% endfor %}">{{ i }}</a></li>
-            {% endif %}
+        {% for page_number in paginator.page_range %}
+            <li class="pagination__item  {% if page.number == page_number %}pagination__item_active{% endif %}">
+                <a class="pagination__link link" href="?page={{ page_number }}">{{ page_number }}</a>
+            </li>
         {% endfor %}
 
-
-        {% if items.has_next %}
-                <li class="pagination__item"><a class="pagination__link link" href="?page={{ items.next_page_number }}{% for tag in tags_for_page %}&filters={{tag}}{% endfor %}"><span class="icon-right"></span></a></li>
-        {% else %}
-                <li class="pagination__item"><a class="pagination__link link" href="#" tabindex="-1" aria-disabled="true"><span class="icon-right"></span></a></li>
+        {% if page.has_next %}
+            <li class="pagination__item">
+                <a class="pagination__link link" href="?page={{ page.next_page_number }}">
+                    <span class="icon-right"></span>
+                </a>
+            </li>
         {% endif %}
-
-
     </ul>
 </nav>
