--- a/templates/index.html
+++ b/templates/index.html
@@ -17,13 +17,16 @@
 </head>
 <body class="body">
     <main class="main container">
-
+        <div class="main__header">
+            <h1 class="main__title">Рецепты</h1>
+            {% include 'includes/tags.html' %}
+            </div>
         <div class="card-list">
         {% for recipe in page %}
         {% include 'includes/recipe_card.html' %}
         {% endfor %}
     </div>
-        {% include 'includes/paginator.html'%}
+        {% include 'includes/paginator.html' %}
     </main>
 </body>
 </html>
