--- a/templates/new_recipe.html
+++ b/templates/new_recipe.html
@@ -18,34 +18,27 @@
                 <label for="id_name" class="form__label">Название рецепта</label>
                 <div class="form__field-group">
                     {{ form.title|add_classes:'form__input' }}
-                    {% if form.errors %}
-                    {% for error in form.title.errors %}
-                        <span class="form__error">{{ error|escape }}</span>
-                    {% endfor %}
-                {% endif %}
                 </div>
             </div>
 
+            {% with form.tag as field %}
             <div class="form__group">
             <p class="form__label">Теги</p>
-            <div class="form__field-group">
-                <div class="tags">
-                    <div class="tags__item">
-                        <input type="checkbox" name="breakfast" id="id_breakfast" class="tags__checkbox tags__checkbox_style_orange">
-                        <label for="id_breakfast" class="tags__label">Завтрак</label>
+                <div class="form__field-group">
+                    <div class="tags">
+                        {% for tag, value in field.field.choices %}
+                        <div class="tags__item">
+                            <input type="checkbox" name="{{ tag.instance.title }}" id="id_{{ tag.instance.title }}" class="tags__checkbox tags__checkbox_style_{{ tag.instance.color }}">
+                            <label for="id_{{ tag.instance.title }}" class="tags__label">{{ tag.instance.name }}</label>
+                        </div>
+                        {% endfor %}
                     </div>
-                    <div class="tags__item">
-                        <input type="checkbox" name="lunch" id="id_lunch" class="tags__checkbox tags__checkbox_style_green">
-                        <label for="id_lunch" class="tags__label">Обед</label>
-                    </div>
-                    <div class="tags__item">
-                        <input type="checkbox" name="dinner" id="id_dinner" class="tags__checkbox tags__checkbox_style_purple" >
-                        <label for="id_dinner" class="tags__label">Ужин</label>
-                    </div>
+                    {% for error in form.tag.errors %}
+                        <span class="form__error">{{ error }}</span>
+                    {% endfor %}
                 </div>
-                <span class="form__error"></span>
             </div>
-        </div>
+            {% endwith %}
 
             <div class="form__group">
                 <label for="nameIngredient" class="form__label">Ингредиенты</label>
@@ -62,7 +55,9 @@
 
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                    <span class="form__error"></span>
+                    {% for error in form.ingredient.errors %}
+                        <span class="form__error">{{ error }}</span>
+                    {% endfor %}
                 </div>
             </div>
 
@@ -71,30 +66,25 @@
                 <div class="form__field-group form__field-group_time">
                     {{ form.duration|add_classes:'form__input' }}
                     <label for="id_time" class="form__label">минут</label>
-                    {% if form.errors %}
-                    {% for error in field.errors %}
-                        <span class="form__error">{{ error|escape }}</span>
+                     {% for error in form.duration.errors %}
+                        <span class="form__error">{{ error }}</span>
                     {% endfor %}
-                    {% endif %}
                 </div>
             </div>
             <div class="form__group">
                 <label for="id_description" class="form__label">Описание</label>
                 <div class="form__field-group">
                     {{ form.description|add_classes:'form__textarea' }}
-                    {% if form.errors %}
-                        {% for error in field.errors %}
-                            <span class="form__error">{{ error|escape }}</span>
-                        {% endfor %}
-                    {% endif %}
+                    {% for error in form.description.errors %}
+                        <span class="form__error">{{ error }}</span>
+                    {% endfor %}
                 </div>
             </div>
             <div class="form__group">
                 <span class="form__label">Загрузить фото</span>
                 <div class="form__field-group">
-                    <label for="id_file" class="form__file-button">Выбрать файл</label>
-                    <input type="file" class="form__file" name="image" id="id_file" >
-                    <span class="form__error"></span>
+                    {{ form.image|add_classes:"form__file-button-image" }}
+                    <span class="form__error">{{ form.image.errors }}</span>
                 </div>
             </div>
 
