--- a/users/templates/reg.html
+++ b/users/templates/reg.html
@@ -18,7 +18,7 @@
             <div class="form__group">
                 <label for="{{ field.id_for_label }}" class="form__label">{{ field.label }}{% if field.field.required %}<span class="required">*</span>{% endif %}</label></label>
                 <div class="form__field-group">
-                    {{ field|add_classes:"form__input" }}
+                    {{ field|add_classes:'form__input' }}
                     {% if field.errors %}<div class="form__error" role="alert">{{ field.label }}: {{ field.errors|striptags }}</div>{% endif %}
                 </div>
             </div>
