--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -7,7 +7,9 @@
 
         <ul class="nav__items list">
             <li class="nav__item"><a href="{% url 'login' %}" class="nav__link link">Войти</a></li>
-            <li class="nav__item"><a href="{% url 'signup' %}" class="button button_style_blue">Создать аккаунт</a></li>
+            <button type="button" class="button button_style_blue">
+                    <a  href="{% url 'signup' %}">Создать аккаунт</a>
+                </button>
         </ul>
     </div>
 </nav>
