--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -103,7 +103,7 @@
                 <label for="id_description" class="form__label">Описание</label>
                 <div class="form__field-group">
                     <textarea name="description" id="id_description" rows="8" class="form__textarea">
-                        {{ recipe.description }}
+                        {{ recipe.description|add_classes:'form__textarea' }}
                     </textarea>
                     <span class="form__error">{{ form.description.errors }}</span>
                 </div>
