--- a/templates/myFollow.html
+++ b/templates/myFollow.html
@@ -46,8 +46,8 @@
 
         </div>
             <div class="card-user__footer">
-                <button class="button button_style_light-blue button_size_auto" name="subscribe"><span class="icon-check button__icon"></span>Отписаться</button>
-            </div>
+                    <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться</button>
+         </div>
         </div>
     {% endfor %}
 </div>
