--- a/templates/includes/tags.html
+++ b/templates/includes/tags.html
@@ -8,15 +8,14 @@
                 class="tags__checkbox tags__checkbox_style_{{ tag.color }}
                 {% if tag.title in request.GET|get_filter_values %} tags__checkbox_active {% endif %}"
 
-
                 {% if url_name == 'index' %}
-                href="{% url 'index' %}?{{ request|get_filter_link:tag }}"
+                    href="{% url 'index' %}?{{ request|get_filter_link:tag }}"
                 {% elif url_name == 'profile' %}
-                href="{% url 'profile' author.username %}?{{ request|get_filter_link:tag }}"
-            {% else %}
-{#            href="{% url 'favorite_index' %}?{{ request|get_filter_link:tag }}"#}
-{% endif %} >
-</a>
+                    href="{% url 'profile' author.username %}?{{ request|get_filter_link:tag }}"
+                {% else %}
+                    href="{% url 'favorite_index' %}?{{ request|get_filter_link:tag }}"
+                {% endif %} >
+            </a>
 
             <span class="tags__label">{{ tag.name }}</span>
         </li>
