--- a/templates/myFollow.html
+++ b/templates/myFollow.html
@@ -22,26 +22,24 @@
             </div>
         <div class="card-user__body">
             <ul class="card-user__items">
-            {% for recipe in follow.author.recipes.all|slice:":3" %}
+            {% for recipe in follow.author.recipes.all|slice:':3' %}
 
-
-                        <li class="card-user__item">
-                            <div class="recipe">
-                                <a href="{% url 'recipe' recipe.id %}" class="recipe__image">
-                                    <img src="{{ recipe.image.url }}" alt="{{ recipe.title }}"
-                                         class="recipe__image"></a>
-                                <h3 class="recipe__title">
-                                    {{ recipe.title }}</h3>
-                                <p class="recipe__text"><span class="icon-time"></span> {{ recipe.duration }} мин.</p>
-                            </div>
-                        </li>
-
+                <li class="card-user__item">
+                    <div class="recipe">
+                        <a href="{% url 'recipe' recipe.id %}" class="recipe__image">
+                            <img src="{{ recipe.image.url }}" alt="{{ recipe.title }}"
+                                 class="recipe__image"></a>
+                        <h3 class="recipe__title">
+                            {{ recipe.title }}</h3>
+                        <p class="recipe__text"><span class="icon-time"></span> {{ recipe.duration }} мин.</p>
+                    </div>
+                </li>
 
             {% endfor %}
             </ul>
 
                         {% if follow.author.recipes.all|length > 3 %}
-                            <a href="{% url 'profile' follow.author.username %}" class="card-user__link link">Еще {{ follow.author.recipes.all.count|add:-3 }} рецеп{{ follow.author.recipes.all.count|add:-3|pluralize:"т,та,тов" }}...</a>
+                            <a href="{% url 'profile' follow.author.username %}" class="card-user__link link">Еще {{ follow.author.recipes.all.count|add:-3 }} {{ follow.author.recipes.all.count|add:-3|even }}...</a>
                         {% endif %}
 
         </div>
