--- a/templates/includes/nav_auth.html
+++ b/templates/includes/nav_auth.html
@@ -11,7 +11,7 @@
 
         <ul class="nav__items list">
             {% if user.is_superuser %}
-                <li class="nav__item"><a href="/admin" class="nav__link link">Админка</a></li>
+                <li class="nav__item"><a href="{% url 'admin:index' %}" class="nav__link link">Админка</a></li>
             {% elif user.is_authenticated %}
                 <li class="nav__item"><a href="{% url 'profile' user %}" class="nav__link link">{{ user }}</a></li>
             {% endif %}
