--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="form-container">
-        <form class="form" method="post">
+        <form class="form" method="post" action="{% url 'login' %}">
             {% csrf_token %}
 
             {% for field in form %}
