--- a/templates/misc/500.html
+++ b/templates/misc/500.html
@@ -1,13 +1,16 @@
-{% extends "base.html" %}
-{% block title %} Ошибка 500 {% endblock %}
-
-{% block styles %}
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'pages/index.css' %}">
-{% endblock %}
+{% extends 'base.html' %}
+{% block title %} Ошибка 404 {% endblock %}
 
 {% block content %}
-        <h1>Ошибка 500</h1>
+    <main class="main container">
+        <div class="main__header">
+            <h1 class="main__title">Ошибка 404</h1>
+        </div>
+
+        <h1>Ошибка 500!</h1>
         <p>Внутренняя ошибка сервера</p>
         <p><a href="{% url  'index' %}">Главная</a></p>
+
+    </main>
 {% endblock %}
+
